- fixed DruidFeralCombatLeaderOfThePack
- to test: DruidFeralCombatFeralSwiftness, DruidFeralCombatHeartOfTheWild